[project]
name = "ast-tool"
dynamic = ["version"]
authors = [
  { name="Zoran Bošnjak", email="zoran.bosnjak@sloveniacontrol.si" },
]
description = "Asterix data processing tool"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    'typing_extensions; python_version < "3.10"',
    'scapy',
    'cryptography',
]

[project.scripts]
ast-tool-py = "main:main"

[project.urls]
"Homepage" = "https://zoranbosnjak.github.io/ast-tool/"
"Bug Tracker" = "https://github.com/zoranbosnjak/ast-tool/issues"

[tool.setuptools.dynamic]
version = {attr = "main.__version__"}

