[project]
name = "ast-tool-py"
dynamic = ["version"]
authors = [
  { name="Zoran Bošnjak", email="zoran.bosnjak@via.si" },
]
description = "Asterix data processing tool"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    'typing_extensions; python_version < "3.10"',
    'scapy',
    'libasterix',
]

keywords = [
    "asterix",
    "eurocontrol",
    "radar",
]

[project.scripts]
ast-tool-py = "main:main"

[project.urls]
"Homepage" = "https://github.com/zoranbosnjak/asterix-tool/tree/master/ast-tool-py#readme"
"Bug Tracker" = "https://github.com/zoranbosnjak/ast-tool/issues"

[tool.setuptools.dynamic]
version = {attr = "main.__version__"}
